--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
     <h1 style="text-align:center;background-color:tomato;padding:30px;">Welcome to my travelling blog</h1>
         <div class="card"> 
             
-            <h3 class="blog-title">My Sajek Tour during winter</h3>
-            <small>Author: <span class="author-name">Khaya Felsi</span></small>
+            <h3 class="blog-title">Ami Tomay Valobashi</h3>
+            <small>Author: <span class="author-name">Prapty</span></small>
+            <img src="01.jpg"alt="shova">
             <p>Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati, Pahar ghas pani mati. pahar ghas pani matiPahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati, Pahar ghas pani mati. pahar ghas pani matiPahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati, Pahar ghas pani mati. pahar ghas pani mati</p>
         </div><br>
         <div class="card"> 
-            <h3 class="blog-title">My Sajek Tour during winter</h3>
-            <small>Author: <span class="author-name">Khaya Felsi</span></small>
+            
+            <h3 class="blog-title">Tumi amar pakhi</h3>
+            <small>Author: <span class="author-name">Prapty</span></small>
+            <img src="02.jpg" alt="shova">
             <p>Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati, Pahar ghas pani mati. pahar ghas pani matiPahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati, Pahar ghas pani mati. pahar ghas pani matiPahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati, Pahar ghas pani mati. pahar ghas pani mati</p>
         </div><br>
         <div class="card"> 
-            <h3 class="blog-title">My Sajek Tour during winter</h3>
-            <small>Author: <span class="author-name">Khaya Felsi</span></small>
+            <h3 class="blog-title">Babui Pakhita amar Ami tomar</h3>
+            <small>Author: <span class="author-name">Prapty</span></small>
+            <img src="02.jpg" alt="shova">
             <p>Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati, Pahar ghas pani mati. pahar ghas pani matiPahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati, Pahar ghas pani mati. pahar ghas pani matiPahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati, Pahar ghas pani mati. pahar ghas pani mati</p>
         </div><br>
 
