--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             
             <h3 class="blog-title">Ami Tomay Valobashi</h3>
             <small>Author: <span class="author-name">Prapty</span></small>
-            <img src="01.jpg"alt="shova">
+            <centre><img src="01.jpg"alt="shova"></centre>
             <p>Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati, Pahar ghas pani mati. pahar ghas pani matiPahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati, Pahar ghas pani mati. pahar ghas pani matiPahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati. Pahar ghas pani mati, Pahar ghas pani mati. pahar ghas pani mati</p>
         </div><br>
         <div class="card"> 
